Updates README, fixes a slew of menu customization bugs/features, updates hover to account for background colour contrast, fixes a bug with icon font sizes inside of buttons.

--- a/app/scss/components/_button.scss
+++ b/app/scss/components/_button.scss
@@ -29,7 +29,8 @@ a[data-c-button] {
     }
 
     i {
-        margin: -.2rem .25rem 0 -.5rem;
+        font-size: inherit;
+        margin: -.2rem .5rem 0 -.5rem;
         transition: all .2s ease;
         vertical-align: middle;
     }
